--- a/Views/CikanUrun/Edit.cshtml
+++ b/Views/CikanUrun/Edit.cshtml
@@ -78,6 +78,7 @@
 
     <script type="text/javascript">
             $(document).ready(function () {
+                sendDataByAjax();
                 $('#DepoId').change(function () { sendDataByAjax(); });
                 $('#MaterialId').change(function () { sendDataByAjax(); });
         })
